--- a/css/style.css
+++ b/css/style.css
@@ -1310,7 +1310,7 @@ a:focus {
 }
 
 .contact .container-fluid {
-    background: url(../img/rutuja.jpeg) left center no-repeat;
+    background: url(../img/rutuja.jpg) left center no-repeat;
     background-size: contain;
 }
 
